# mcp-server-google-ads

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py  service_account_key.json.example  test_server.py  utils.py
